Update CSS & Point contact form to client email

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -360,6 +360,7 @@ footer a h6:hover {
     padding: 2.5rem;
     background: var(--white-smoke);
     transition: all 0.5s;
+    height: 100%;
 }
 
 
